--- a/lab2/lab2-2.html
+++ b/lab2/lab2-2.html
@@ -41,7 +41,7 @@
         var ctx = c.getContext("2d");
         ctx.font = "100px Itim";
         ctx.strokeStyle = "#B9CBED";
-        ctx.strokeText("Yohea Kato",160,175);
+        ctx.strokeText("Yohea Kato Yo",100,175);
     </script>
 </body>
 </html>
